src/test/compile-fail-fulldeps/gated-plugin.rs
// aux-build:macro_crate_test.rs

#![plugin(macro_crate_test)]
//~^ ERROR compiler plugins are experimental and possibly buggy

fn main() {}
